@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/readability-score
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  06 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
+  dev-python/readability-score: Add github to remote-id in metadata.xml
 
 *readability-score-1.0 (17 Jul 2014)
 
